--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ajaytiwari",
   "version": "0.1.0",
   "private": true,
+  "homepage": " https://10shubham01.github.io/ajaytiwari/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"npm build",
+    "deploy":"gh-pages"
   },
   "eslintConfig": {
     "extends": [
