--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy":"npm build",
-    "deploy":"gh-pages"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
